# ne-pro-group

./: ARCHITECTURE.md  CLAUDE.md  CONCURRENCY_EXPLAINED.md  Cargo.toml  FRONTEND_INTEGRATION.md  PROJECT_STATUS.md  README.md  TESTING.md  flake.nix  game.html  home.html  login.html  room_create.html  room_join.html  stay.html  theme.html  vote.html
Chat/: Cargo.toml  index.html  main.rs
Chat/src/: game.rs  main.rs
Chat/webroot/: index.html
src/: chat.rs  main.rs  routes.rs  state.rs  topic.rs  types.rs  ws.rs
src/game/: mod.rs  player.rs  rules.rs  state.rs  theme.rs
src/network/: handlers.rs  http.rs  mod.rs  sse.rs
src/rooms/: manager.rs  mod.rs  room.rs
static/: app.js  index.html  style.css
